# langgraph-automated-research-agent

./: .gitignore  README.md  evaluator.py  evidence.py  llm_client.py  main.py  models.py  orchestration.py  pyproject.toml  report_output.py  research.py  research_agent.py  router.py  search_client.py  synthesis.py
core/: config.py  evidence.py  llm_client.py  report_output.py  search_client.py
pipeline/: evaluator.py  orchestration.py  research_agent.py  router.py  synthesis.py
